--- a/library-frontend/package.json
+++ b/library-frontend/package.json
@@ -28,20 +28,24 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
-    "@quasar/app-vite": "^2.1.0",
+    "@quasar/app-vite": "^2.3.0",
+    "@quasar/quasar-app-extension-testing": "^2.2.0",
     "@types/crypto-js": "^4.2.2",
     "@types/lodash": "^4.17.20",
     "@types/node": "^20.5.9",
     "@vue/eslint-config-prettier": "^10.1.0",
     "@vue/eslint-config-typescript": "^14.4.0",
+    "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.2",
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.30.0",
     "globals": "^15.12.0",
+    "jsdom": "^26.1.0",
     "lottie-web": "^5.13.0",
     "prettier": "^3.3.3",
     "typescript": "~5.5.3",
     "vite-plugin-checker": "^0.9.0",
+    "vitest": "^3.2.4",
     "vue-tsc": "^2.0.29"
   },
   "engines": {
