--- a/library-frontend/package.json
+++ b/library-frontend/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint -c ./eslint.config.js \"./src*/**/*.{ts,js,cjs,mjs,vue}\"",
     "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"No test specified\" && exit 0",
-    "dev": "quasar dev",
-    "build": "quasar build",
+    "dev": "cross-env VITE_MODE=development quasar dev",
+    "docker": "cross-env VITE_MODE=docker quasar dev",
+    "build:dev": "cross-env VITE_MODE=development quasar build",
+    "build:docker": "cross-env VITE_MODE=docker quasar build",
     "postinstall": "quasar prepare"
   },
   "dependencies": {
@@ -37,6 +39,7 @@
     "@vue/eslint-config-typescript": "^14.4.0",
     "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.2",
+    "cross-env": "^10.0.0",
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.30.0",
     "globals": "^15.12.0",
