--- a/library-frontend/package.json
+++ b/library-frontend/package.json
@@ -14,6 +14,7 @@
     "docker": "cross-env VITE_MODE=docker quasar dev",
     "build:dev": "cross-env VITE_MODE=development quasar build",
     "build:docker": "cross-env VITE_MODE=docker quasar build",
+    "build": "npm run build:docker",
     "postinstall": "quasar prepare"
   },
   "dependencies": {
