--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - ~/.m2:/root/.m2   # <-- Cache local do Maven
+      - ~/.m2:/root/.m2
     networks:
       - library_net
 
