--- a/library-backend/.env.docker
+++ b/library-backend/.env.docker
@@ -5,7 +5,7 @@ POSTGRES_PASSWORD=postgres123
 APP_DB_USER=app_user
 APP_DB_PASSWORD=app_user123
 
-PGADMIN_DEFAULT_EMAIL=admin@library.com
+PGADMIN_DEFAULT_EMAIL=admin@example.com
 PGADMIN_DEFAULT_PASSWORD=admin123
 
 SPRING_PROFILES_ACTIVE=docker
